// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Pages/<Home /> should render component with all discovered 1`] = `
<div
  className="home-page-container"
>
  <ProgressBar
    percent={100}
  />
  <div
    className="basic-info-section section row"
  >
    <div
      className="left-column col s12 m6"
    >
      <img
        alt="Me"
        className="my-profile-photo"
        src="test-file-stub"
      />
    </div>
    <div
      className="right-column col s12 m6"
    >
      <h4
        className="name-lastname"
      >
        Dmytro Kovalenko
      </h4>
      <p
        className="job-title"
      >
        Full Stack JS Developer
      </p>
      <p
        className="location"
      >
        <a
          href="https://www.google.es/maps?q=41.382207,2.140318"
          rel="noopener noreferrer"
          target="_blank"
        >
          Sants Estació, Barcelona, Spain
        </a>
      </p>
      <p>
        <strong>
          Contact info: 
        </strong>
        Contact me in
         
        <a
          href="https://www.linkedin.com/in/kovalenkodmytro/"
          rel="noopener noreferrer"
          target="_blank"
        >
          LinkedIn
        </a>
      </p>
      <p>
        <strong>
          Age: 
        </strong>
        ***
      </p>
      <p>
        <strong>
          Nationality: 
        </strong>
        ***
      </p>
    </div>
  </div>
  <div
    className="summary-section section"
  >
    <h3
      className="section-title"
    >
      About me:
    </h3>
    <p>
      ***
    </p>
    <p>
      ***
    </p>
    <p>
      ***
    </p>
  </div>
  <div
    className="languages-section section"
  >
    <h3
      className="section-title"
    >
      Languages I speak:
    </h3>
    <div
      className="languages-wrapper row"
    >
      <LanguageItem
        discovered={true}
        id="lnguage-1"
        image="test-file-stub"
        level="Native or bilingual proficiency"
        name="Українська"
      />
      <LanguageItem
        discovered={true}
        id="lnguage-2"
        image="test-file-stub"
        level="Native or bilingual proficiency"
        name="Русский"
      />
      <LanguageItem
        discovered={true}
        id="lnguage-3"
        image="test-file-stub"
        level="Full professional proficiency"
        name="English"
      />
      <LanguageItem
        discovered={true}
        id="lnguage-4"
        image="test-file-stub"
        level="Professional working proficiency"
        name="Español"
      />
    </div>
  </div>
  <div
    className="hobbies-section section"
  >
    <h3
      className="section-title"
    >
      My hobbies:
    </h3>
    <div
      className="hobbies-wrapper"
    >
      <HobbyItem
        description="Even though I am working as a full time programmer,
      my biggest hobby is still programming. Lastly, I spend most of my
      free time doing some programming or learning about it. My passion
      started in the university, where I learned creating different games
      in C++, C# and Python. Now I enjoy a lot creating different web
      applications, especially if they can be helpful or interesting
      for other people. For the moment, the most pleasure I have working
      with Javascript, more precisely with Node and React."
        discovered={true}
        discoveredDetails={true}
        id="hobby-1"
        image="test-file-stub"
        name="Programming"
        storageName="programming"
      />
      <HobbyItem
        description="I love doing sports, especially team playing games like
      football, volleyball or basketball. While studying, I was playing
      quite seriously - I was even a captain of the faculty team in the
      university. Also I was very dedicated for several years to
      bodybuilding and powerlifting and I reached significant results,
      gaining more than 30 kg of body mass and good strength metrics.
      Also I enjoy playing table tennis, chess, billiard, running, cycling,
      swimming and other activities. Sport helps to keep fit my body and mind
      and also it is a great fun."
        discovered={true}
        discoveredDetails={true}
        id="hobby-2"
        image="test-file-stub"
        name="Sports"
        storageName="sports"
      />
      <HobbyItem
        description="I like different puzzles and particularly I have a big
      interest for Rubik’s cubes. I have a collection of different sizes
      from 2x2 to 10x10 and my dream is to get a cube of 17x17. I do not
      really like speed cubing, I prefer solving them slowly and without
      pressure, normally it helps me to relax and to distract my brain from
      possible stresses. For example, to solve the cube of size 10x10 I normally
      spend 3-4 hours."
        discovered={true}
        discoveredDetails={true}
        id="hobby-3"
        image="test-file-stub"
        name="Puzzles"
        storageName="puzzles"
      />
      <HobbyItem
        description="From a very childhood I like to collect different things
      and my biggest and the most important collection is my collection of coins.
      I have around 2000 different coins from different countries and this number
      is growing every year. Most of them I got while traveling or from my friends.
      I do not have some super special coins, my idea is just to collect as many
      different coins as I can."
        discovered={true}
        discoveredDetails={true}
        id="hobby-4"
        image="test-file-stub"
        name="Numismatics"
        storageName="numismatics"
      />
      <HobbyItem
        description="I love making pictures and videos. Even though I have never had
      some big achievements in photography, I enjoy the process of getting a perfect
      shot, including editing and retouching. My favourite kind of photography
      is portrait. Making pictures of people is the most enjoyable for me but,
      also, I like to make pictures of animals and nature. I love when the picture
      is full of bright colours especially green, blue, yellow and red. I have a dream
      to make a photo exhibition and to make a short movie some day."
        discovered={true}
        discoveredDetails={true}
        id="hobby-5"
        image="test-file-stub"
        name="Photography"
        storageName="photography"
      />
    </div>
  </div>
</div>
`;

exports[`components/Pages/<Home /> should render component with discovered but all hidden 1`] = `
<div
  className="home-page-container"
>
  <ProgressBar
    percent={50}
  />
  <div
    className="basic-info-section section row"
  >
    <div
      className="left-column col s12 m6"
    >
      <img
        alt="Me"
        className="my-profile-photo"
        src="test-file-stub"
      />
    </div>
    <div
      className="right-column col s12 m6"
    >
      <h4
        className="name-lastname"
      >
        <strong>
          Name: 
        </strong>
         
        ***
      </h4>
      <p
        className="job-title"
      >
        <strong>
          Profession: 
        </strong>
         
        ***
      </p>
      <p
        className="location"
      >
        <strong>
          Location: 
        </strong>
         
        ***
      </p>
      <p>
        <strong>
          Contact info: 
        </strong>
        ***
      </p>
      <p>
        <strong>
          Age: 
        </strong>
        ***
      </p>
      <p>
        <strong>
          Nationality: 
        </strong>
        ***
      </p>
    </div>
  </div>
  <div
    className="summary-section section"
  >
    <h3
      className="section-title"
    >
      About me:
    </h3>
    <p>
      ***
    </p>
    <p>
      ***
    </p>
    <p>
      ***
    </p>
  </div>
  <div
    className="languages-section section"
  >
    <h3
      className="section-title"
    >
      Languages I speak:
    </h3>
    <div
      className="languages-wrapper row"
    >
      <LanguageItem
        id="lnguage-1"
        image="test-file-stub"
        level="Native or bilingual proficiency"
        name="Українська"
      />
      <LanguageItem
        id="lnguage-2"
        image="test-file-stub"
        level="Native or bilingual proficiency"
        name="Русский"
      />
      <LanguageItem
        id="lnguage-3"
        image="test-file-stub"
        level="Full professional proficiency"
        name="English"
      />
      <LanguageItem
        id="lnguage-4"
        image="test-file-stub"
        level="Professional working proficiency"
        name="Español"
      />
    </div>
  </div>
  <div
    className="hobbies-section section"
  >
    <h3
      className="section-title"
    >
      My hobbies:
    </h3>
    <div
      className="hobbies-wrapper"
    >
      <HobbyItem
        description="Even though I am working as a full time programmer,
      my biggest hobby is still programming. Lastly, I spend most of my
      free time doing some programming or learning about it. My passion
      started in the university, where I learned creating different games
      in C++, C# and Python. Now I enjoy a lot creating different web
      applications, especially if they can be helpful or interesting
      for other people. For the moment, the most pleasure I have working
      with Javascript, more precisely with Node and React."
        id="hobby-1"
        image="test-file-stub"
        name="Programming"
        storageName="programming"
      />
      <HobbyItem
        description="I love doing sports, especially team playing games like
      football, volleyball or basketball. While studying, I was playing
      quite seriously - I was even a captain of the faculty team in the
      university. Also I was very dedicated for several years to
      bodybuilding and powerlifting and I reached significant results,
      gaining more than 30 kg of body mass and good strength metrics.
      Also I enjoy playing table tennis, chess, billiard, running, cycling,
      swimming and other activities. Sport helps to keep fit my body and mind
      and also it is a great fun."
        id="hobby-2"
        image="test-file-stub"
        name="Sports"
        storageName="sports"
      />
      <HobbyItem
        description="I like different puzzles and particularly I have a big
      interest for Rubik’s cubes. I have a collection of different sizes
      from 2x2 to 10x10 and my dream is to get a cube of 17x17. I do not
      really like speed cubing, I prefer solving them slowly and without
      pressure, normally it helps me to relax and to distract my brain from
      possible stresses. For example, to solve the cube of size 10x10 I normally
      spend 3-4 hours."
        id="hobby-3"
        image="test-file-stub"
        name="Puzzles"
        storageName="puzzles"
      />
      <HobbyItem
        description="From a very childhood I like to collect different things
      and my biggest and the most important collection is my collection of coins.
      I have around 2000 different coins from different countries and this number
      is growing every year. Most of them I got while traveling or from my friends.
      I do not have some super special coins, my idea is just to collect as many
      different coins as I can."
        id="hobby-4"
        image="test-file-stub"
        name="Numismatics"
        storageName="numismatics"
      />
      <HobbyItem
        description="I love making pictures and videos. Even though I have never had
      some big achievements in photography, I enjoy the process of getting a perfect
      shot, including editing and retouching. My favourite kind of photography
      is portrait. Making pictures of people is the most enjoyable for me but,
      also, I like to make pictures of animals and nature. I love when the picture
      is full of bright colours especially green, blue, yellow and red. I have a dream
      to make a photo exhibition and to make a short movie some day."
        id="hobby-5"
        image="test-file-stub"
        name="Photography"
        storageName="photography"
      />
    </div>
  </div>
</div>
`;

exports[`components/Pages/<Home /> should render component with empty props 1`] = `
<div
  className="home-page-container"
>
  <EmptyView
    section="home"
  >
    <p>
      Welcome to my new personal project!
    </p>
    <p>
      Ask questions as you are speaking to me and try to populate the website with the info my bot will provide. Every page will have a progress bar which indicates how much info you have already recovered - so you will know where to stop asking about some particular topic.
    </p>
    <p>
      For example, 
      <b>
        "
        What is your name?
        "
      </b>
       sounds like a good question to start, but it can be something else too, just use your imagination ;)
    </p>
  </EmptyView>
</div>
`;
